correction overflow

--- a/hr_project/style.css
+++ b/hr_project/style.css
@@ -19,8 +19,6 @@ html,
 body{
   height: 100vh; 
   width: 100vw;
-
-
 }
 
 .rounded-extra{
@@ -54,8 +52,8 @@ body{
 }
 .heightcontent{
   height: fit-content;
-    overflow: hidden;
 }
+
 .text-white{
   color: var(--color-white);
 }
